# nlohmann-reflect-cpp

./: CMakeLists.txt  LICENSE  README.md
include/rfl/: nlohmann.hpp
include/rfl/nlohmann/: Parser.hpp  Reader.hpp  Writer.hpp  read.hpp  write.hpp
src/: Reader.cpp  Writer.cpp
